# hex-a-hop

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  gfx.cpp  hex_puzzzle.cpp  i18n.h  menus.h  packfile.h  savestate.h  state.h
data/: Damfile  Makefile.am  Makefile.in  hex-a-hop.6  hex-a-hop.appdata.xml  hex-a-hop.desktop  hex-a-hop.icns  hints.html  music-ending.ogg.xml  music-game-1.ogg.xml  music-game-nc.flac.xml  music-game-nonfree-1.flac.xml  music-game-nonfree.flac.xml  music-game.flac.xml  music-game.ogg.xml  music-map-nc.flac  music-map-nc.flac.xml  music-map.flac.xml  music-map.mmpz  music-map.mmpz.xml  sound-death.wav.xml  sound-disintegrate.flac  sound-disintegrate.flac.xml  sound-disintegrate.ogg.xml  sound-explode-big.flac  sound-explode-big.flac.xml  sound-explode-small.flac  sound-explode-small.flac.xml  sound-floater-enter.wav.xml  sound-ice.flac  sound-ice.flac.xml  sound-laser-1.wav.xml  sound-laser.flac  sound-laser.flac.xml  sound-lift-down.wav.xml  sound-lift-up.wav.xml  sound-trampoline-1.flac  sound-trampoline-1.flac.xml  sound-trampoline.flac  sound-trampoline.flac.xml  (+7 more)
debian/: changelog  control  copyright  files  hex-a-hop.bg.6  hex-a-hop.de.6  hex-a-hop.de.add  hex-a-hop.es.6  hex-a-hop.es.add  hex-a-hop.ja.6  hex-a-hop.nl.6  hex-a-hop.pl.6  hex-a-hop.ru.6  hex-a-hop.substvars  hex-a-hop.ta.6  hex-a-hop.vi.6  install  lintian-override  menu  rules
debian/hex-a-hop/DEBIAN/: control  md5sums
debian/hex-a-hop/usr/games/: hex-a-hop
debian/hex-a-hop/usr/share/doc/hex-a-hop/: copyright  hints.html
debian/hex-a-hop/usr/share/locale/ja/LC_MESSAGES/: hex-a-hop.mo
debian/hex-a-hop/usr/share/locale/nl/LC_MESSAGES/: hex-a-hop.mo
debian/hex-a-hop/usr/share/locale/ru/LC_MESSAGES/: hex-a-hop.mo
debian/hex-a-hop/usr/share/locale/ta/LC_MESSAGES/: hex-a-hop.mo
debian/i18n/: Makefile  bg.mo  bg.po  de.mo  de.po  es.mo  es.po  hex-a-hop.pot  hex_puzzzle_preprocessed.cpp  ja.po  languages.list  nl.po  pl.mo  pl.po  ru.po  ta.po  vi.mo  vi.po
debian/patches/: array_subscripts_warning.patch  compiler_warnings.patch  endianess.patch  gettext_i18n.patch  i18n_increase_array_sizes.patch  minimal-sdl-init.patch  misc_errors.patch  mouse-wheel-support.patch  mouse_cursor_without_font.patch  pango_fonts.patch  patch-hex-a-hop-better-than-par.diff  proper_directories.patch  reduce_cpu_usage.patch  remove_old_font_handling.patch  series  typos.patch
debian/tools/: Makefile  bmp2dat.c
msc/m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  bg.gmo  bg.po  de.gmo  de.po  es.gmo  es.po  hex-a-hop.pot.comments  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl.gmo  pl.po  ru.gmo  ru.po  ta.gmo  ta.po  vi.gmo  vi.po
src/: Makefile.am  Makefile.in  config.h.cmake  config.h.in  gfx.cpp  gfx_list.h  hex_puzzzle.cpp  i18n.cpp  i18n.h  level_list.h  menus.h  packfile.h  savestate.h  sfx.cpp  sfx.h  state.h  system-directory.h  system-relative.c  text.cpp  text.h  tiletypes.h  video.h
src/tools/: dat2bmp.c
