datadir = $(DATADIR)
datadat = \
	emi.dat \
	font.dat \
	font.ttf \
	gradient.dat \
	icon.bmp \
	levels.dat \
	map.dat \
	map_top.dat \
	tiles.dat \
	tiles_reflect.dat \
	title.dat \
	music-game.ogg \
	music-map.ogg \
	sound-death.ogg \
	sound-disintegrate.ogg \
	sound-explode-big.ogg \
	sound-explode-small.ogg \
	sound-floater-enter.ogg \
	sound-ice.ogg \
	sound-laser.ogg \
	sound-trampoline.ogg \
	sound-trampoline-1.ogg \
	sound-used-jump.ogg \
	sound-used-jump-1.ogg \
	sound-ui-menu.ogg
data_DATA = $(datadat)
EXTRA_DIST = $(datadat)
